# reflexio-enterprise

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.base  GEMINI.md  README.md  SELF_HOST_SUMMARY.md  how_to_write_readme.md  pyproject.toml  pyrightconfig.json  run_services.sh  stop_services.sh
.claude/commands/commit/: SKILL.md
.claude/commands/create-pr/: SKILL.md
.claude/commands/review/: SKILL.md
.claude/commands/run-services/: SKILL.md
.claude/commands/test-all/: SKILL.md
.claude/commands/update-pr/: SKILL.md
.claude/rules/: git-conventions.md  python-docstrings.md  pythonic-code.md  reflexio-patterns.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/pr-creator/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/ralph/: SKILL.md
.claude/skills/sync-agent-instructions/: SKILL.md
.claude/skills/update-pr/: SKILL.md
.claude/skills/update-public-docs/: SKILL.md
benchmarks/appworld/: README.md  config.py  run_benchmark.py
benchmarks/appworld/agent/: __init__.py  base_agent.py  prompts.py  reflexio_agent.py
benchmarks/appworld/evaluation/: analysis.py  metrics.py
benchmarks/appworld/integration/: context_builder.py  reflexio_bridge.py
benchmarks/appworld/runner/: experiment_runner.py  task_runner.py
benchmarks/appworld/scripts/: run_baseline.py  run_comparison.py  run_enhanced.py
benchmarks/locomo/: README.md  answer_generator.py  baselines.py  config.py  data_loader.py  evaluate_qa.py  ingest.py  metrics.py  report.py  run_benchmark.py
benchmarks/locomo/data/: README.md
benchmarks/longmemeval/: 01_ingest.py  02_retrieve_and_answer.py  03_evaluate.py  04_report.py  README.md  config.py  download_data.py  run_all.py  run_benchmark.py
demo/: evaluate_conversations.py  run_comparison.py  scenarios.py  serve_viewer.py  simulate_conversation.py  viewer.html
demo/output/stable/: isp_outage_wfh_20260208_150241.jsonl  isp_outage_wfh_reflexio_20260208_151116.jsonl  request_refund_20260207_205538.jsonl  request_refund_reflexio_20260208_151622.jsonl  restaurant_togo_order_20260201_222850.jsonl  restaurant_togo_order_reflexio_20260208_152228.jsonl  subscription_cancel_upgrade_20260208_153410.jsonl  subscription_cancel_upgrade_reflexio_20260208_153710.jsonl  weekly_status_email_20260308_163413.jsonl  weekly_status_email_reflexio_20260308_224130.jsonl
docker/: Dockerfile  Dockerfile.base  Dockerfile.update  docker-compose.yaml  requirements.txt  supervisord.conf
docs/: aws-ecs-deployment-minimal.md  aws-ecs-deployment.md  aws-ecs-selfhost-deployment.md  aws-ecs-update-task-definition.md  aws-ecs-upgrade-option-a.md  aws-migrate-mkdocs-to-fumadocs.md  git-worktree.md  supabase-migration.md
notebooks/: reflexio_cookbook.ipynb
openclaw-hook-reflexio-context/: README.md  package.json
openclaw-hook-reflexio-context/hook/: HOOK.md  handler.js
openclaw-hook-reflexio-context/scripts/: fetch_context.py
public_docs/: .gitignore  package-lock.json  tsconfig.json
public_docs/content/docs/: index.mdx  meta.json
reflexio/: __init__.py
reflexio/hooks/: check_api_hooks.py
reflexio/public_docs/: biome.json  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  source.config.ts  tsconfig.json
reflexio/public_docs/app/: layout.tsx
reflexio/public_docs/components/: mdx-components.tsx
reflexio/public_docs/lib/: source.ts
reflexio/reflexio_client/: README.md  pyproject.toml
reflexio/reflexio_client/reflexio/: __init__.py  cache.py  client.py  client_utils.py  migrated___init__.py
reflexio/reflexio_client/tests/: test_cache.py
reflexio/reflexio_commons/: README.md  pyproject.toml
reflexio/reflexio_commons/reflexio_commons/: config_schema.py
reflexio/reflexio_commons/reflexio_commons/api_schema/: internal_schema.py  login_schema.py  migrated_internal_schema.py  migrated_retriever_schema.py  migrated_service_schemas.py  retriever_schema.py  service_schemas.py  validators.py
reflexio/reflexio_commons/tests/: test_validators.py
reflexio/reflexio_lib/: __init__.py  _base.py  _config.py  _dashboard.py  _feedback.py  _generation.py  _interactions.py  _operations.py  _profiles.py  _raw_feedback.py  _search.py  _skills.py  migrated__base.py  migrated__profiles.py  migrated__search.py  reflexio_lib.py
reflexio/scripts/: analyze_db_usage.py  count_tokens.py  deploy_ecs.sh  local_db_reset.sh  run_all_migrations.py  show_raw_feedback_with_interactions.py  snapshot_manager.py  test_skill_e2e.py  test_supabase_connection.py  update_docs.sh
reflexio/scripts/super_admin/: clear_data_for_org.py  reset_password_script.py
reflexio/server/: README.md  __init__.py  api.py
reflexio/server/api_endpoints/: login.py  migrated_publisher_api.py  oauth.py  precondition_checks.py  publisher_api.py  request_context.py  retriever_api.py
reflexio/server/cache/: __init__.py  reflexio_cache.py
reflexio/server/db/: database.py  db_models.py  db_operations.py  login_supabase_client.py  s3_org_storage.py
reflexio/tests/: conftest.py  readme.md
reflexio/utils/: encrypt_manager.py
reflexio/website/: biome.json  eslint.config.mjs  next.config.ts  package.json
reflexio_ext/: __init__.py
reflexio_ext/hooks/: check_api_hooks.py
reflexio_ext/scripts/: README.md  deploy_ecs.sh  docker_cleanup.py  run_all_migrations.py  snapshot_manager.py  test_supabase_connection.py
reflexio_ext/server/: __init__.py  api.py
reflexio_ext/tests/: conftest.py
reflexio_ext/utils/: s3_utils.py
supabase/auth/: README.md  config.toml  run_migrations.sh
supabase/data/: config.toml
supabase/migrations/: 20260309120000_rename_request_group_to_session_id.sql  20260311130000_remove_embedding_from_hybrid_rpc.sql  20260312130000_rename_avg_to_user_turns.sql
supabase_login/: run_migrations.sh
website/: .gitignore  README.md  package-lock.json  package.json
website/app/: layout.tsx
website/components/: auth-page.tsx  layout-content.tsx  mobile-sidebar.tsx  responsive-sidebar.tsx  sidebar.tsx
website/lib/: auth-context.tsx  routes.ts
(+467 files in other folders)
