[project]
name = "reflexio-enterprise"
version = "0.1.2"
description = "Reflexio Enterprise — extends the open-source Reflexio platform"
authors = [{name = "Reflexio Team"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "reflexio",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.149",
    "sqlalchemy>=2.0.31",
    "supabase>=2.15.1",
    "python-multipart>=0.0.22",
    "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.8.0",
    "black>=24.10.0",
    "moto>=5.0.28",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.8",
    "ruff>=0.15.0",
    "pyright>=1.1.400",
    "pandas>=3.0.1",
    "pytest-cov>=6.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
    "griffe>=0.38.0",
    "mkdocstrings-python>=1.7.0",
]
benchmarks = [
    "scipy>=1.11.0",
]

[tool.uv.sources]
reflexio = { path = "open_source/reflexio", editable = true }
reflexio-commons = { path = "open_source/reflexio/reflexio/reflexio_commons", editable = true }

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reflexio_ext"]

[tool.pytest.ini_options]
# Parallel test execution with pytest-xdist
# -n auto: Use all available CPU cores
# --dist loadfile: Group tests by file (reduces fixture overhead, safer for in-file dependencies)
addopts = "-n auto --dist loadfile --cov --cov-report=term-missing --cov-report=html"
testpaths = ["reflexio_ext/tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
# Measure branch coverage — ensures both if/else paths are tested, not just lines
branch = true
source = ["reflexio_ext"]
omit = [
    "**/__init__.py",
    "reflexio_ext/tests/*",
    "reflexio_ext/data/*",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (unused imports, undefined names)
    "W",      # pycodestyle warnings
    "B",      # flake8-bugbear (likely bugs & design problems)
    "UP",     # pyupgrade (modern Python syntax)
    "I",      # isort (import sorting)
    "C4",     # flake8-comprehensions (correct dict/list/set usage)
    "SIM",    # flake8-simplify (code simplification patterns)
    "RET",    # flake8-return (return statement quality)
    "PERF",   # perflint (performance anti-patterns)
    "C90",    # McCabe complexity
    "S",      # flake8-bandit (security checks)
    "N",      # pep8-naming conventions
    "ANN",    # flake8-annotations (enforce type annotations)
    "ARG",    # flake8-unused-arguments
    "G",      # flake8-logging-format (no f-strings in logging)
    "PTH",    # flake8-use-pathlib (pathlib over os.path)
    "FURB",   # refurb (modern Python idioms)
    "FLY",    # flynt (string join → f-string)
    "PLR1714",# pylint: repeated-equality-comparison → use `in`
    "PLR1716",# pylint: boolean-chained-comparison → chain
]
ignore = [
    "E501",   # line too long (handled by formatter/black)
    "E402",   # module-level import not at top (common in __init__.py)
    "ANN002",  # missing type for *args (often inherited from frameworks)
    "ANN003",  # missing type for **kwargs (often inherited from frameworks)
    "ANN204",  # missing return type for __init__ (-> None is obvious)
    "ANN401",  # dynamically typed Any (sometimes intentional)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"reflexio_ext/tests/**" = ["S101", "ARG001", "ARG002", "PTH", "ANN"]
"conftest.py" = ["ARG001"]
"notebooks/**" = ["S101", "F821", "S105", "S106", "ANN"]
"reflexio_ext/server/api.py" = ["B008", "ARG001", "ARG002"]
"reflexio_ext/server/api_endpoints/**" = ["B008", "ARG001", "ARG002"]
"demo/**" = ["S101", "PTH", "G004", "ANN"]
"benchmarks/**" = ["S101", "PTH", "G004", "ANN"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
