[project]
name = "reflexio-client"
version = "0.1.0.3"
description = "A Python client for the Reflexio API"
authors = [{name = "Reflexio Team"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "reflexio-commons==0.1.0.2",
    "aiohttp>=3.12.9",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
    "mkdocstrings[python]>=0.18.0",
    "griffe==0.48.0",
    "mkdocs-with-pdf>=0.9.3",
    "weasyprint>=66.0",
]

[tool.uv.sources]
reflexio-commons = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reflexio"]
