[project]
name = "reflexio-commons"
version = "0.1.0.2"
description = ""
authors = [{name = "Yi Lu", email = "yilu331@gmail.com"}]
readme = "README.md"
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reflexio_commons"]
